--- a/style.css
+++ b/style.css
@@ -1,137 +1,729 @@
-.logo {
-	position: absolute;
-	width: 190px;
-	height: 35px;
-	left: 219px;
-	top: 40px;
+@media (max-width: 400px) {
+
+.menu__icon {
+   display: none;
+   width: 45px;
+   height: 35px;
+   position: relative;
+   cursor: pointer;
 }
 
-.menu {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  color: #000;
-}
-
-.menu__start {
-	position: absolute;
-	width: 30px;
-	height: 17px;
-	left: calc(50% - 30px/2 + 166px);
-	top: 51px;
-}
-
-.menu__services {
-	position: absolute;
-	width: 53px;
-	height: 17px;
-	left: calc(50% - 53px/2 + 231.5px);
-	top: 51px;
-}
-
-.menu__about {
-	position: absolute;
-	width: 36px;
-	height: 17px;
-	left: calc(50% - 36px/2 + 300px);
-	top: 51px;
-}
-
-.menu__blog {
-	position: absolute;
-	width: 28px;
-	height: 17px;
-	left: calc(50% - 28px/2 + 359px);
-	top: 51px;
-}
-
-.menu__contact-us {
-	position: absolute;
-	width: 66px;
-	height: 17px;
-	left: calc(50% - 66px/2 + 433px);
-	top: 51px;
-}
-
-.frame {
+.menu__icon span {
+  display: block;
   position: absolute;
-  width: 514px;
-  height: 439px;
-  left: calc(50% - 514px/2 + 208px);
-  top: 195px;
+  height: 9px;
+  width: 100%;
+  background: #333333;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  transform: rotate(0deg);
+  transition: .25s ease-in-out;
 }
 
-.fill_wd {
-	position: absolute;
-	width: 330px;
-	height: 53px;
-	left: calc(50% - 380px/2 - 274px);
-	top: 286px;
-
-	background: #ECF3FF;
-}
-.fill_exp {
-	position: absolute;
-	width: 203px;
-	height: 53px;
-	left: calc(50% - 226px/2 - 351px);
-	top: 353px;
-
-	background: #ECF3FF;
+.menu__icon span:nth-child(1) {
+  top: 0px;
 }
 
-.title {
-  position: absolute;
-  width: 434px;
-  height: 199px;
-  left: calc(50% - 434px/2 - 249px);
-  top: 170px;
-
-  font-family: PT Serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 50px;
-  line-height: 66px;
-  display: flex;
-  align-items: center;
-  color: #000000;
+.menu__icon span:nth-child(2), .menu__icon span:nth-child(3) {
+  top: 13px;
 }
 
-.article {
-  position: absolute;
-  width: 367px;
-  height: 43px;
-  left: calc(50% - 367px/2 - 281.5px);
-  top: 447px;
+.menu__icon span:nth-child(4) {
+  top: 26px;
+ }
 
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 21px;
+.menu__links-item {
+    display: inline-block;
+    color: #333333;
+    font-family: Arial;
+    font-size: 14px;
+    line-height: 30px;
+    padding: 0 10px;
+    text-transform: uppercase;
+    text-decoration: none;
+    cursor: pointer;
 }
 
-.button {
-	position: absolute;
-	width: 209px;
-	height: 44px;
-	left: calc(50% - 209px/2 - 359.5px);
-	top: 531px;
-
-	background: #0056EC;
-	border-radius: 4px;
+.menu__links-item:hover {
+    text-decoration: underline;
 }
 
-.button__text {
-	color: white;
+.menu.menu_state_open .menu__icon span:nth-child(1) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
 }
 
-.footer {
-  position: absolute;
-  width: 32px;
-  height: 8px;
-  left: 667px;
-  top: 620px;
+.menu.menu_state_open .menu__icon span:nth-child(2) {
+  transform: rotate(45deg);
 }
+
+.menu.menu_state_open  .menu__icon span:nth-child(3) {
+  transform: rotate(-45deg);
+}
+
+.menu.menu_state_open  .menu__icon span:nth-child(4) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+
+.menu.menu_state_open .menu__links {
+  display: block;  
+}
+
+	.logo {
+	display: none;
+	}
+
+.menu__icon{
+    display: inline-block;
+  }
+  
+  .menu__links {
+    position: fixed;
+    display: none;
+    top: 0;
+    right: 0;
+    left: 0;
+    margin-top: 52px;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1000;
+    overflow: auto;
+  }
+  
+  .menu__links-item {
+    display: block;
+    padding: 10px 0;
+    text-align: center;
+    color: #ffffff;
+  }
+}
+	
+	.logo_mob {
+		position: absolute;
+		width: 36px;
+		height: 35px;
+		left: 24px;
+		top: 24px;
+	}
+
+	.menu {
+	  font-family: Roboto;
+	  font-style: normal;
+	  font-weight: 500;
+	  font-size: 30px;
+	  line-height: 35px;
+	  color: #000;
+	}
+	.line_menu {
+		display: none;
+	}
+	.menu__start {
+		position: absolute;
+		width: 63px;
+		height: 36px;
+		left: calc(50% - 63px/2);
+		top: 186px;
+	}
+
+	.menu__services {
+		position: absolute;
+		width: 113px;
+		height: 36px;
+		left: calc(50% - 113px/2);
+		top: 246px;
+	}
+
+	.menu__about {
+		position: absolute;
+		width: 77px;
+		height: 36px;
+		left: calc(50% - 77px/2 - 2px);
+		top: 306px;
+	}
+
+	.menu__blog {
+		position: absolute;
+		width: 59px;
+		height: 36px;
+		left: calc(50% - 59px/2 - 2px);
+		top: 366px;
+	}
+
+	.menu__contact-us {
+		position: absolute;
+		width: 142px;
+		height: 36px;
+		left: calc(50% - 142px/2 - 2.5px);
+		top: 426px;
+	}
+
+	.frame {
+	  position: absolute;
+	  width: 280px;
+	  height: 239px;
+	  left: calc(50% - 280px/2 + 0.5px);
+	  top: 87px;
+	}
+
+	.fill_wd {
+		position: absolute;
+		width: 204px;
+		height: 33px;
+		left: calc(50% - 234px/2 + 3.5px);
+		top: 392px;
+
+		background: #ECF3FF;
+	}
+	.fill_exp {
+		position: absolute;
+		width: 120px;
+		height: 32px;
+		left: calc(50% - 139px/2 - 5px);
+		top: 434px;
+
+		background: #ECF3FF;
+	}
+
+	.title {
+	  position: absolute;
+	  width: 267px;
+	  height: 96px;
+	  left: calc(50% - 267px/2 + 20px);
+	  top: 335px;
+
+	  font-family: PT Serif;
+	  font-style: normal;
+	  font-weight: bold;
+	  font-size: 30px;
+	  line-height: 40px;
+	  display: flex;
+	  align-items: center;
+	  text-align: center;
+	  color: #000;
+	}
+
+	.article {
+	  position: absolute;
+	  width: 275px;
+	  height: 57px;
+	  left: calc(50% - 275px/2 + 3px);
+	  top: 498px;
+
+	  font-family: Roboto;
+	  font-style: normal;
+	  font-weight: 500;
+	  font-size: 16px;
+	  line-height: 19px;
+	  text-align: center;
+
+	  color: #000;
+	}
+
+	.button {
+		position: absolute;
+		width: 209px;
+		height: 44px;
+		left: calc(50% - 209px/2 + 1px);
+		top: 580px;
+		background: #0056EC;
+		border-radius: 4px;
+	}
+
+	.button__text {
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 16px;
+		color: #FFFFFF;
+
+	  
+		border-radius: 4px;
+	}
+	.footer {
+		display:none;
+	}
+}
+
+@media (min-width: 1024px) {
+	.logo {
+		position: absolute;
+		width: 190px;
+		height: 35px;
+		left: 46px;
+		top: 40px;
+	}
+	.logo_mob {
+	display: none;
+	}
+	.line_menu {
+		position: absolute;
+		width: 46px;
+		height: 2px;
+		left: calc(50% - 53px/2 + 231.5px);
+		top: 68px;
+
+		background: #0056EC;
+	}
+	.menu {
+	  font-family: Roboto;
+	  font-style: normal;
+	  font-weight: 500;
+	  font-size: 14px;
+	  line-height: 16px;
+	  color: #000;
+	}
+
+
+	.menu__start {
+		position: absolute;
+		width: 30px;
+		height: 17px;
+		left: calc(50% - 30px/2 + 161px);
+		top: 51px;
+	}
+
+	.menu__services {
+		position: absolute;
+		width: 53px;
+		height: 17px;
+		left: calc(50% - 53px/2 + 231.5px);
+		top: 51px;
+	}
+
+	.menu__about {
+		position: absolute;
+		width: 36px;
+		height: 17px;
+		left: calc(50% - 36px/2 + 300px);
+		top: 51px;
+	}
+
+	.menu__blog {
+		position: absolute;
+		width: 28px;
+		height: 17px;
+		left: calc(50% - 28px/2 + 359px);
+		top: 51px;
+	}
+
+	.menu__contact-us {
+		position: absolute;
+		width: 66px;
+		height: 17px;
+		left: calc(50% - 66px/2 + 433px);
+		top: 51px;
+	}
+
+	.frame {
+	  position: absolute;
+	  width: 514px;
+	  height: 439px;
+	  left: calc(50% - 514px/2 + 208px);
+	  top: 195px;
+	}
+
+	.fill_wd {
+		position: absolute;
+		width: 330px;
+		height: 53px;
+		left: calc(50% - 380px/2 - 274px);
+		top: 286px;
+
+		background: #ECF3FF;
+	}
+	.fill_exp {
+		position: absolute;
+		width: 203px;
+		height: 53px;
+		left: calc(50% - 226px/2 - 351px);
+		top: 353px;
+
+		background: #ECF3FF;
+	}
+
+	.title {
+	  position: absolute;
+	  width: 434px;
+	  height: 199px;
+	  left: calc(50% - 434px/2 - 249px);
+	  top: 170px;
+
+	  font-family: PT Serif;
+	  font-style: normal;
+	  font-weight: bold;
+	  font-size: 50px;
+	  line-height: 66px;
+	  display: flex;
+	  align-items: center;
+	  color: #000;
+	}
+
+	.article {
+	  position: absolute;
+	  width: 367px;
+	  height: 43px;
+	  left: calc(50% - 367px/2 - 282.5px);
+	  top: 447px;
+
+	  font-family: Roboto;
+	  font-style: normal;
+	  font-weight: 500;
+	  font-size: 18px;
+	  line-height: 21px;
+
+	  color: #000;
+	}
+
+	.button {
+		position: absolute;
+		width: 209px;
+		height: 44px;
+		left: calc(50% - 209px/2 - 361.5px);
+		top: 531px;
+		background: #0056EC;
+	}
+
+	.button__text {
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 16px;
+		color: #FFFFFF;
+
+	  
+		border-radius: 4px;
+	}
+	.footer {
+	  position: absolute;
+	  width: 32px;
+	  height: 8px;
+	  left: 496px;
+	  top: 722px;
+	}
+}
+@media (min-width: 1366px) {
+	.logo {
+		position: absolute;
+		width: 190px;
+		height: 35px;
+		left: 220px;
+		top: 40px;
+	}
+	.logo_mob {
+	display: none;
+	}
+	.line_menu {
+		position: absolute;
+		width: 51px;
+		height: 2px;
+		left: calc(50% - 51px/2 + 222.5px);
+		top: 68px;
+
+		background: #0056EC;
+	}
+	.menu {
+	  font-family: Roboto;
+	  font-style: normal;
+	  font-weight: 500;
+	  font-size: 14px;
+	  line-height: 16px;
+	  color: #000;
+	}
+
+
+	.menu__start {
+		position: absolute;
+		width: 30px;
+		height: 17px;
+		left: calc(50% - 30px/2 + 161px);
+		top: 51px;
+	}
+
+	.menu__services {
+		position: absolute;
+		width: 53px;
+		height: 17px;
+		left: calc(50% - 53px/2 + 226.5px);
+		top: 51px;
+	}
+
+	.menu__about {
+		position: absolute;
+		width: 36px;
+		height: 17px;
+		left: calc(50% - 36px/2 + 295px);
+		top: 51px;
+	}
+
+	.menu__blog {
+		position: absolute;
+		width: 28px;
+		height: 17px;
+		left: calc(50% - 28px/2 + 354px);
+		top: 51px;
+	}
+
+	.menu__contact-us {
+		position: absolute;
+		width: 66px;
+		height: 17px;
+		left: calc(50% - 66px/2 + 428px);
+		top: 51px;
+	}
+
+	.frame {
+	  position: absolute;
+	  width: 514px;
+	  height: 439px;
+	  left: calc(50% - 514px/2 + 208px);
+	  top: 195px;
+	}
+
+	.fill_wd {
+		position: absolute;
+		width: 330px;
+		height: 53px;
+		left: calc(50% - 380px/2 - 274px);
+		top: 286px;
+
+		background: #ECF3FF;
+	}
+	.fill_exp {
+		position: absolute;
+		width: 203px;
+		height: 53px;
+		left: calc(50% - 226px/2 - 351px);
+		top: 353px;
+
+		background: #ECF3FF;
+	}
+
+	.title {
+	  position: absolute;
+	  width: 434px;
+	  height: 199px;
+	  left: calc(50% - 434px/2 - 248px);
+	  top: 170px;
+
+	  font-family: PT Serif;
+	  font-style: normal;
+	  font-weight: bold;
+	  font-size: 50px;
+	  line-height: 66px;
+	  display: flex;
+	  align-items: center;
+	  color: #000;
+	}
+
+	.article {
+	  position: absolute;
+	  width: 367px;
+	  height: 43px;
+	  left: calc(50% - 367px/2 - 281.5px);
+	  top: 447px;
+
+	  font-family: Roboto;
+	  font-style: normal;
+	  font-weight: 500;
+	  font-size: 18px;
+	  line-height: 21px;
+
+	  color: #000;
+	}
+
+	.button {
+		position: absolute;
+		width: 209px;
+		height: 44px;
+		left: calc(50% - 209px/2 - 359.5px);
+		top: 531px;
+		background: #0056EC;
+	}
+
+	.button__text {
+		font-family: Roboto;
+		font-style: normal;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 16px;
+		color: #FFFFFF;
+
+	  
+		border-radius: 4px;
+	}
+	.footer {
+	  position: absolute;
+	  width: 32px;
+	  height: 8px;
+	  left: 667px;
+	  top: 722px;
+	}
+}
+
+
+@media (min-width: 1920px) {
+   	.logo {
+			position: absolute;
+			width: 190px;
+			height: 35px;
+			left: 196px;
+			top: 40px;
+		}
+		.logo_mob {
+			display: none;
+		}
+		.line_menu {
+			position: absolute;
+			width: 60px;
+			height: 3px;
+			left: calc(50% - 68px/2 + 479px);
+			top: 69px;
+
+			background: #0056EC;
+		}
+		.menu {
+		  font-family: Roboto;
+		  font-style: normal;
+		  font-weight: 500;
+		  font-size: 18px;
+		  line-height: 21px;
+		  color: #000;
+		}
+		.menu__start {
+			position: absolute;
+			width: 38px;
+			height: 22px;
+			left: calc(50% - 38px/2 + 401px);
+			top: 47px;
+		}
+
+		.menu__services {
+			position: absolute;
+			width: 68px;
+			height: 22px;
+			left: calc(50% - 68px/2 + 479px);
+			top: 47px;
+		}
+
+		.menu__about {
+			position: absolute;
+			width: 47px;
+			height: 22px;
+			left: calc(50% - 47px/2 + 560.5px);
+			top: 47px;
+		}
+
+		.menu__blog {
+			position: absolute;
+			width: 36px;
+			height: 22px;
+			left: calc(50% - 36px/2 + 629px);
+			top: 47px;
+		}
+
+		.menu__contact-us {
+			position: absolute;
+			width: 85px;
+			height: 22px;
+			left: calc(50% - 85px/2 + 716.5px);
+			top: 47px;
+		}
+		.frame {
+		  position: absolute;
+		  width: 770px;
+		  height: 657px;
+		  left: calc(50% - 770px/2 + 378px);
+		  top: 242px;
+		}
+		.fill_wd {
+			position: absolute;
+			width: 445px;
+			height: 69px;
+			left: calc(50% - 497px/2 - 515.5px);
+			top: 415px;
+
+			background: #ECF3FF;
+		}
+		.fill_exp {
+			position: absolute;
+			width: 270px;
+			height: 70px;
+			left: calc(50% - 296px/2 - 616px);
+			top: 502px;
+
+			background: #ECF3FF;
+		}
+		.title {
+		  position: absolute;
+		  width: 567px;
+		  height: 255px;
+		  left: calc(50% - 567px/2 - 481.5px);
+		  top: 265px;
+
+		  font-family: PT Serif;
+		  font-style: normal;
+		  font-weight: bold;
+		  font-size: 66px;
+		  line-height: 87px;
+		  display: flex;
+		  align-items: center;
+		  color: #000;
+		}
+		.article {
+		  position: absolute;
+		  width: 455px;
+		  height: 52px;
+		  left: calc(50% - 455px/2 - 537.5px);
+		  top: 613px;
+
+		  font-family: Roboto;
+		  font-style: normal;
+		  font-weight: normal;
+		  font-size: 22px;
+		  line-height: 26px;
+
+		  color: #000;
+		}
+		.button {
+			position: absolute;
+			width: 271px;
+			height: 57px;
+			left: 196px;
+			top: 706px;
+
+			background: #0056EC;
+			border-radius: 4px;
+		}
+		.button__text {
+			font-family: Roboto;
+			font-style: normal;
+			font-weight: 500;
+			font-size: 18px;
+			line-height: 21px;
+
+			color: #FFF;
+		}
+		.footer {
+			position: absolute;
+			width: 32px;
+			height: 8px;
+			left: 944px;
+			top: 1032px;
+		}
+}
+
+
+
+
+
+
+
+
+
+
+
