--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@
 .menu__icon span {
   display: block;
   position: absolute;
-  height: 9px;
-  width: 100%;
-  background: #333333;
-  border-radius: 9px;
+  height: 6px;
+  width: 70%;
+  background: #0056EC;
+  border-radius: 7px;
   opacity: 1;
-  left: 0;
+  left: 305px;
   transform: rotate(0deg);
   transition: .25s ease-in-out;
 }
@@ -26,19 +26,21 @@
 }
 
 .menu__icon span:nth-child(2), .menu__icon span:nth-child(3) {
-  top: 13px;
+  top: 10px;
 }
 
 .menu__icon span:nth-child(4) {
-  top: 26px;
+  top: 20px;
  }
 
 .menu__links-item {
     display: inline-block;
-    color: #333333;
-    font-family: Arial;
-    font-size: 14px;
-    line-height: 30px;
+    color: #000;
+    font-family: Roboto;
+		font-style: normal;
+		font-weight: 500;
+		font-size: 30px;
+		line-height: 35px;
     padding: 0 10px;
     text-transform: uppercase;
     text-decoration: none;
@@ -99,14 +101,14 @@
     text-align: center;
     color: #ffffff;
   }
-}
-	
+
+
 	.logo_mob {
 		position: absolute;
 		width: 36px;
 		height: 35px;
 		left: 24px;
-		top: 24px;
+		top: 32px;
 	}
 
 	.menu {
